--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -37,6 +37,7 @@
     <link rel="stylesheet" href="/styles/react-table.css">
     <link rel="stylesheet" href="/styles/slick-theme.min.css">
     <link rel="stylesheet" href="/styles/slick.min.css">
+    <link rel="stylesheet" href="/styles/style.css">
     <!--STYLES END-->
   </head>
    <script>
