--- a/assets/styles/layout.css
+++ b/assets/styles/layout.css
@@ -49,8 +49,8 @@ header .dropdown-menu>li>a{
     font-size: 11px;
 }
 .jumbotron{
-    background: black;
+    background: #222222;
 }
 body{
-    background: black
+    background: #222222
 }
