--- a/assets/styles/layout.css
+++ b/assets/styles/layout.css
@@ -14,7 +14,7 @@ header .dropdown-menu>li>a{
     font-size: 12px;
 }
 .post-wall{
-    background: ##080808;
+    background: #080808;
     color: wheat;
     border-radius: 5px;
 }
