--- a/assets/styles/layout.css
+++ b/assets/styles/layout.css
@@ -15,7 +15,8 @@ header .dropdown-menu>li>a{
 }
 .post-wall{
     background: #080808;
-    color: wheat;
+    /* color: wheat; */
+    color: #f5f5f5;
     border-radius: 5px;
 }
 .question,.vote,.post-toggle{
@@ -53,4 +54,78 @@ header .dropdown-menu>li>a{
 }
 body{
     background: #222222
+}
+.list-post{
+    background: white;
+    padding: 10px;
+}
+.header-listpost{
+    margin: 0px -10px 0px -10px;
+
+}
+.header-listpost ul li{
+    float: left;
+    padding: 10px;
+    list-style: none;
+    width: 46%;
+    text-align: center;
+    font-size: 16px;
+}
+.header-listpost .tab-header-list-post  a{
+    color: #080808;
+    font-size: 16px;
+    font-weight: bold;
+    
+}
+.header-listpost .tab-header-list-post  .active{
+    border-bottom: 6px solid #19ab27 !important;
+}
+.header-listpost{
+    padding-bottom:30px;
+    margin-bottom: 40px;
+}
+.fa{
+    color: #19ab27
+}
+.post header h2{
+    font-weight: bold !important;
+    font-size: 19px !important;
+    display: inline !important;
+    margin-right: 5px !important;
+    color:#4A4A50
+}
+.post .img-user{
+    width: 36px;
+    border-radius: 50%;
+    float: left;
+}
+.post .user-avatar{
+    float: left;
+    padding-top: 8px;
+    /* padding-right: 37px; */
+    /* padding: 0px; */
+    width: 46px;
+}
+.post .user-answer{
+    padding: 10px 0px 10px 0px;
+}
+.post .user-detail{
+    padding-top: 13px;
+}
+.post .user-name{
+    color: #b2b2bb;
+    font-size: 12px;
+    float: left;
+    padding-right: 20px;
+}
+.content-asw{
+    word-wrap: break-word;
+    font-size: 16px;
+    line-height: 21px;
+    color: #4A4A50;
+    margin-top: 10px;
+}
+.post .time p{
+    color: #b2b2bb;
+    font-size: 12px;
 }
