--- a/assets/styles/layout.css
+++ b/assets/styles/layout.css
@@ -9,6 +9,11 @@
     margin-right: -15px;
     font-size: 20px;
 }
+.title-web{
+    font-weight: bold;
+    color: #19ab27 !important;
+    font-size: 20px;
+}
 }
 header .dropdown-menu>li>a{
     font-size: 12px;
@@ -35,6 +40,7 @@ header .dropdown-menu>li>a{
     float: right;
     padding: 10px 0px 10px 0px;
     font-size: 16px;
+    cursor: pointer;
 }
  .post-toggle .react-toggle--checked .react-toggle-thumb {
     left: 30px;
@@ -48,6 +54,7 @@ header .dropdown-menu>li>a{
 }
 .post-toggle .text-toggle{
     font-size: 11px;
+    font-family: initial;
 }
 .jumbotron{
     background: #222222;
@@ -67,17 +74,23 @@ body{
     float: left;
     padding: 10px;
     list-style: none;
-    width: 46%;
+    /* width: 46%; */
     text-align: center;
     font-size: 16px;
 }
 .header-listpost .tab-header-list-post  a{
-    color: #080808;
+ 
+    width: 100%;
+    padding: 0px 58px 8px 58px;
+    color: rgb(175, 170, 170);
     font-size: 16px;
     font-weight: bold;
+    text-decoration: none;
+   
     
 }
-.header-listpost .tab-header-list-post  .active{
+.header-listpost .tab-header-list-post li .active{
+    color:#080808 !important;
     border-bottom: 6px solid #19ab27 !important;
 }
 .header-listpost{
@@ -106,6 +119,25 @@ body{
     /* padding: 0px; */
     width: 46px;
 }
+.img-user{
+    width: 26px;
+    border-radius: 50%;
+    float: left;
+}
+.user-avatar{
+    float: left;
+    margin-top: -4px;
+    /* padding-right: 37px; */
+    /* padding: 0px; */
+    width: 33px;
+}
+.header .user-name{
+    color: #b2b2bb;
+    font-size: 12px;
+    float: left;
+    font-weight: bold;
+    color: white;
+}
 .post .user-answer{
     padding: 10px 0px 10px 0px;
 }
@@ -128,4 +160,95 @@ body{
 .post .time p{
     color: #b2b2bb;
     font-size: 12px;
+}
+
+.footer-post{
+    
+    padding: 10px 0px 10px 0px;
+
+}
+.footer-post .btn-heart{
+   float: left;
+}
+.footer-post .btn-footer-post {
+    float: left;
+    width: 25% ;
+    cursor: pointer;
+    font-size: 12px;
+    
+}
+.footer-post .btn-footer-post i{
+    font-size: 16px;
+}
+.footer-post .btn-footer-post:hover .fa{
+    font-weight: bold !important;
+    font-size: 20px
+}
+.footer-post .btn-more{
+    float: right;
+    font-size: 11px;
+}
+.footer-post .btn-more .dropdown {
+    list-style: none;
+    font-size: 16px;
+    float: right;
+    margin-top: -5px;
+
+}
+.footer-post .dropdown-menu>li>a{
+    font-size: 11px;
+
+}
+.title-modal-post{
+    float: left;
+    padding-left: 15px;
+    font-size: 16px;
+    font-weight: bold;
+}
+.body-modal-post .row{
+    padding-top: 15px;
+}
+.content-question .react-toggle-track{
+    height: 19px;
+    width: 47px;
+}
+.content-question .react-toggle--checked .react-toggle-thumb{
+    left: 28px;
+}
+.content-question .react-toggle-thumb{
+    width: 20px;
+    height: 18px;
+    top: 1px;
+}
+.content-question .text-toggle{
+    font-size: 12px;
+    padding-left: 4px;
+}
+body, input, textarea {
+    font-family: ProximaNova, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    color: #4A4A50;
+    font-size: 14px;
+    -webkit-font-smoothing: subpixel-antialiased;
+}
+.content-question .number-men{
+    font-family: initial;
+    font-size:16px
+}
+.content-question .search input[type=text] {
+	width: 196px;
+    /* float: left; */
+    box-sizing: border-box;
+    border: 1px solid #e0dcdc;
+    font-size: 14px;
+    background-color: white;
+    background-image: url(../../images/searchicon.png);
+    background-position: 9px 8px;
+    background-repeat: no-repeat;
+    padding: 7px 11px 7px 34px;
+    /* border-radius: 24px; */
+    -webkit-transition: width 1s ease-in-out;
+    transition: width 0.4s ease-in-out;
+}
+.content-question .search input[type=text]:focus {
+    width: 100%;
 }
