--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -34,6 +34,7 @@
     <link rel="stylesheet" href="/styles/font-awesome.min.css">
     <link rel="stylesheet" href="/styles/importer.css">
     <link rel="stylesheet" href="/styles/layout.css">
+    <link rel="stylesheet" href="/styles/react-select.css">
     <link rel="stylesheet" href="/styles/react-table.css">
     <link rel="stylesheet" href="/styles/slick-theme.min.css">
     <link rel="stylesheet" href="/styles/slick.min.css">
