them trang ca nhan

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -39,6 +39,7 @@
     <link rel="stylesheet" href="/styles/slick-theme.min.css">
     <link rel="stylesheet" href="/styles/slick.min.css">
     <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="/styles/userpage.css">
     <!--STYLES END-->
   </head>
    <script>
