--- a/assets/styles/layout.css
+++ b/assets/styles/layout.css
@@ -140,6 +140,7 @@ body{
     color: white;
 }
 .post .user-answer{
+    clear: both;
     padding: 10px 0px 10px 0px;
 }
 .post .user-detail{
@@ -156,7 +157,8 @@ body{
     font-size: 16px;
     line-height: 21px;
     color: #4A4A50;
-    margin-top: 10px;
+    /* margin-top: 10px; */
+    padding-bottom: 10px;
 }
 .post .time p{
     color: #b2b2bb;
@@ -165,8 +167,8 @@ body{
 
 .footer-post{
     
-    padding: 10px 0px 10px 0px;
-
+    padding: 10px 15px 10px 15px;
+    background: #f5f5f5;
 }
 .footer-post .btn-heart{
    float: left;
@@ -183,7 +185,7 @@ body{
 }
 .footer-post .btn-footer-post:hover .fa{
     font-weight: bold !important;
-    font-size: 20px
+    /* font-size: 20px */
 }
 .footer-post .btn-more{
     float: right;
