--- a/assets/styles/layout.css
+++ b/assets/styles/layout.css
@@ -153,6 +153,7 @@ body{
     padding-right: 20px;
 }
 .content-asw{
+    clear: both;
     word-wrap: break-word;
     font-size: 16px;
     line-height: 21px;
@@ -162,7 +163,11 @@ body{
 }
 .post .time p{
     color: #b2b2bb;
+  
     font-size: 12px;
+    float: left;
+    margin-right: 6px;
+    margin-bottom: 9px;
 }
 
 .footer-post{
