--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -192,3 +192,17 @@
 .text-rep .pull-right li{
   list-style: none;
 }
+.title-subject{
+  font-weight: bold;
+  padding: 8px 20px 8px 8px;
+  float: left;
+  border-radius: 19px;
+  background: whitesmoke;
+}
+.title-subject .count-subject{
+  font-size: 11px;
+  font-weight: normal;
+  color: #b5a4a4;
+  /* margin-right: 0px; */
+  margin-left: 11px;
+}
