thêm trang cá nhân , trag detail post notifi

--- a/assets/styles/importer.less
+++ b/assets/styles/importer.less
@@ -68,9 +68,9 @@ position:relative
   -webkit-box-shadow: 0 3px 8px rgba(0, 0, 0, 0.25);
   overflow: visible;
   position: absolute;
-  top: 43px;
-  margin-left: -350px;
-  width: 400px;
+  top: 41px;
+  margin-left: -332px;
+  width: 382px;
   z-index: 9999;
   display: none; // Enable this after jquery implementation 
 }
@@ -91,21 +91,22 @@ position:relative
 {
 font-weight: bold;
 padding: 8px;
-font-size: 13px;
+font-size: 12px;
 background-color: #ffffff;
 position: fixed;
 z-index: 1000;
-width: 384px;
+width: 380px;
 border-bottom: 1px solid #dddddd;
 }
 #notificationsBody
 {
-padding: 25px 0px 0px 0px !important;
+padding:10px 0px 0px 0px !important;
 min-height:300px;
+font-size: 12px;
 }
 #notificationFooter
 {
-background-color: #e9eaed;
+// background-color: #e9eaed;
 text-align: center;
 font-weight: bold;
 padding: 8px;
@@ -113,7 +114,7 @@ font-size: 12px;
 border-top: 1px solid #dddddd;
 }
 .avatar-alert {
-  width: 50px;
+  width: 44px;
   border-radius: 50%;
   // margin-top: -4px;
 }
@@ -144,7 +145,7 @@ font-size: 11px;
 .time-alert{
   color: #89908e;
   margin-bottom: 1px !important;
-  font-size: 13px;
+  font-size: 12px;
 }
 .beeperNub {
   right: 14px;
@@ -156,7 +157,7 @@ font-size: 11px;
   background-position: 0 -358px;
   height: 11px;
   position: absolute;
-  top: -11px;
+  top: -10px;
   width: 20px;
 }
 
