thêm thông báo comment realtime

--- a/assets/styles/importer.less
+++ b/assets/styles/importer.less
@@ -114,7 +114,8 @@ font-size: 12px;
 border-top: 1px solid #dddddd;
 }
 .avatar-alert {
-  width: 44px;
+  width: 48px;
+  height: 48px;
   border-radius: 50%;
   // margin-top: -4px;
 }
@@ -142,6 +143,13 @@ font-size: 11px;
   padding-bottom: 5px;
   border-bottom: 1px solid #d8d4d4;
 }
+.alert-message a{
+    color: #555
+}
+.alert-message a :hover{
+  text-decoration: none;
+  
+} 
 .time-alert{
   color: #89908e;
   margin-bottom: 1px !important;
