--- a/assets/styles/importer.less
+++ b/assets/styles/importer.less
@@ -17,7 +17,7 @@
 #layout{
     // background-color: rgba(175, 175, 226, 0.32);
     height: 100%;
-  
+    background: #eeeeef;
 }
 .title-profile{
   float: left;
@@ -115,8 +115,8 @@ font-size: 12px;
 border-top: 1px solid #dddddd;
 }
 .avatar-alert {
-  width: 48px;
-  height: 48px;
+  width: 36px;
+  // height: 48px;
   border-radius: 50%;
   // margin-top: -4px;
 }
