--- a/assets/styles/layout.css
+++ b/assets/styles/layout.css
@@ -23,12 +23,12 @@ header .dropdown-menu>li>a{
     color: #333;
     /* color: #f5f5f5; */
     border-radius: 5px;
-    margin: 5px 0px 5px 0px;
+    margin-bottom: 2px
 }
 .question,.vote,.post-toggle{
     float: left;
-    font-size: 16px;
     padding:  10px ;
+    font-size: 12px;
     font-weight: bold;
 }
 .post-toggle{
@@ -40,7 +40,7 @@ header .dropdown-menu>li>a{
 .btn-post{
     float: right;
     padding: 10px 0px 10px 0px;
-    font-size: 16px;
+    /* font-size: 16px; */
     cursor: pointer;
 }
  .post-toggle .react-toggle--checked .react-toggle-thumb {
@@ -58,14 +58,19 @@ header .dropdown-menu>li>a{
     font-family: initial;
 }
 .jumbotron{
-    background: #222222;
+    /* background: #eeeeef; */
+    padding-top: 22px !important;
+    padding-bottom: 0px !important;
+    padding-bottom: 0px !important;
+     margin-bottom: 0px !important;
 }
 body{
-    background: #222222
+    background:#eeeef0
 }
 .list-post{
     background: white;
     padding: 10px;
+    margin-top: 10px
 }
 .header-listpost{
     margin: 0px -10px 0px -10px;
@@ -73,7 +78,7 @@ body{
 }
 .header-listpost ul li{
     float: left;
-    padding: 10px;
+    /* padding: 10px; */
     list-style: none;
     /* width: 46%; */
     text-align: center;
@@ -95,8 +100,8 @@ body{
     border-bottom: 6px solid #19ab27 !important;
 }
 .header-listpost{
-    padding-bottom:30px;
-    margin-bottom: 40px;
+    /* padding-bottom:30px;
+    margin-bottom: 40px; */
 }
 .fa{
     color: #19ab27
@@ -109,7 +114,8 @@ body{
     color:#4A4A50
 }
 .post .img-user{
-    width: 36px;
+    width: 33px;
+    height: 33px;
     border-radius: 50%;
     float: left;
 }
@@ -147,7 +153,8 @@ body{
     padding-top: 13px;
 }
 .post .user-name{
-    color: #b2b2bb;
+    color: #4dab28;
+    font-weight: bold;
     font-size: 12px;
     float: left;
     padding-right: 20px;
@@ -155,7 +162,7 @@ body{
 .content-asw{
     clear: both;
     word-wrap: break-word;
-    font-size: 16px;
+    font-size: 14px;
     line-height: 21px;
     color: #4A4A50;
     padding-top: 8px;
