--- a/assets/styles/layout.css
+++ b/assets/styles/layout.css
@@ -59,7 +59,7 @@ header .dropdown-menu>li>a{
 }
 .jumbotron{
     /* background: #eeeeef; */
-    padding-top: 22px !important;
+    /* padding-top: 22px !important; */
     padding-bottom: 0px !important;
     padding-bottom: 0px !important;
      margin-bottom: 0px !important;
