thêm private chat user

--- a/assets/styles/importer.less
+++ b/assets/styles/importer.less
@@ -17,7 +17,7 @@
 #layout{
     // background-color: rgba(175, 175, 226, 0.32);
     height: 100%;
-    background: #eeeeef;
+    background: #e9ebef;
 }
 .title-profile{
   float: left;
