--- a/assets/styles/layout.css
+++ b/assets/styles/layout.css
@@ -58,7 +58,7 @@ header .dropdown-menu>li>a{
     font-family: initial;
 }
 .jumbotron{
-    /* background: #eeeeef; */
+    background:#e9ebef;
     /* padding-top: 22px !important; */
     padding-bottom: 0px !important;
     padding-bottom: 0px !important;
