--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -31,6 +31,9 @@
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/animate.css">
     <link rel="stylesheet" href="/styles/bootstrap.min.css">
+    <link rel="stylesheet" href="/styles/chat/chatbox.css">
+    <link rel="stylesheet" href="/styles/chat/homepage.css">
+    <link rel="stylesheet" href="/styles/chat/layout.css">
     <link rel="stylesheet" href="/styles/font-awesome.min.css">
     <link rel="stylesheet" href="/styles/importer.css">
     <link rel="stylesheet" href="/styles/layout.css">
@@ -140,6 +143,7 @@
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
     <script src="/js/bundel.js"></script>
+    <script src="/js/chatboxuser.js"></script>
     <script src="/js/lib/bootstrap.min.js"></script>
     <script src="/js/lib/jquery-3.1.1.min.js"></script>
     <script src="/js/lib/jquery.min.js"></script>
