--- a/assets/styles/chat/chatbox.css
+++ b/assets/styles/chat/chatbox.css
@@ -108,7 +108,7 @@
             }
 
             /* Custom bootstrap panel chat box*/
-            .panel .panel-body{
+           .chat-window .panel .panel-body{
                 min-height: 188px;
             }
             .col-md-12 {
@@ -134,9 +134,22 @@
             .message-box{
                 padding-bottom: 10px;
             }
+            .message-rec{
+                clear: both;
+                width: 100%;
+            }
+            .img-chatbox{
+                float: left;
+                width: 16%;
+            }
+            .content-text{
+                float: left;
+                width: 82%;
+                
+            }
             .message-chatbox-rc{
                
-                /*  display: flex; */
+                 display: flex;
                 /* align-items: center; */
                 /* justify-content: center; */
                 /* text-align: center; */
@@ -144,10 +157,9 @@
                 font-size: 11px;
                 float: left;
                 background: #f1f0f1;
-                border-radius: 0px 10px 5px 9px;
-                padding: 3px 9px 4px 9px;
+                border-radius: 0px 8px 9px 7px;
+                padding: 3px 2px 4px 7px;
                 word-wrap: break-word;
-                clear: both;
             }
             .message-chatbox-sent{
                
@@ -160,7 +172,7 @@
                 font-size: 11px;
                 float: right;
                 background: #f1f0f1;
-                border-radius: 0px 10px 5px 9px;
-                padding: 3px 9px 4px 9px;
+                border-radius: 5px 6px 5px 7px;
+                padding: 2px 4px 2px 9px;
                 word-wrap: break-word;
             }
