--- a/assets/styles/chat/layout.css
+++ b/assets/styles/chat/layout.css
@@ -1,11 +1,11 @@
 
-
+/* 
 .col-md-10 {
     width: 250% !important;
 }
 .col-md-2, .col-md-10{
     padding:0;
-}
+} */
 .panel{
     margin-bottom: 0px;
 }
