thêm chỉnh sửa profile và chat riêng hoàn thiện

--- a/assets/styles/chat/chatbox.css
+++ b/assets/styles/chat/chatbox.css
@@ -109,7 +109,7 @@
 
             /* Custom bootstrap panel chat box*/
            .chat-window .panel .panel-body{
-                min-height: 188px;
+                height: 225px;
             }
             .col-md-12 {
                 /* width: 91% !important; */
