--- a/assets/styles/chat/layout.css
+++ b/assets/styles/chat/layout.css
@@ -25,7 +25,7 @@
 .msg_container_base{
     background: #ffffff;
     margin: 0;
-    padding: 10px 10px 10px;
+    padding: 4px 5px 4px;
     max-height: 225px;
     overflow-y: auto;
 }
@@ -145,20 +145,20 @@ img {
 
 .msg_container_base::-webkit-scrollbar-track
 {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-    background-color: #F5F5F5;
+    /* -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); */
+    background-color: #f2f2f2;
 }
 
 .msg_container_base::-webkit-scrollbar
 {
     width: 12px;
-    background-color: #F5F5F5;
+    /* background-color: #c2c2c2; */
 }
 
 .msg_container_base::-webkit-scrollbar-thumb
 {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-    background-color: #555;
+    /* -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3); */
+    background-color: #c2c2c2;
 }
 
 .btn-group.dropup{
