upload viode chỉnh sửa css

--- a/assets/styles/layout.css
+++ b/assets/styles/layout.css
@@ -448,3 +448,18 @@ div[contentEditable=true]:empty:not(:focus):before{
 div[contenteditable="true"]:focus {
   border: none !important;
 }
+.player-wrapper {
+  position: relative;
+  padding-top: 100%;
+   /* Player ratio: 100 / (1280 / 720) */
+}
+
+.react-player {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.video-react{
+  padding-top: 100% !important;
+}
+
