--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -35,6 +35,7 @@
     <link rel="stylesheet" href="/styles/chat/homepage.css">
     <link rel="stylesheet" href="/styles/chat/layout.css">
     <link rel="stylesheet" href="/styles/font-awesome.min.css">
+    <link rel="stylesheet" href="/styles/group.css">
     <link rel="stylesheet" href="/styles/importer.css">
     <link rel="stylesheet" href="/styles/layout.css">
     <link rel="stylesheet" href="/styles/react-select.css">
