--- a/assets/styles/group.css
+++ b/assets/styles/group.css
@@ -349,6 +349,9 @@
   color: #4b4f56;
   margin-right: 4px;
 }
+.page-member .list-member .info-member .info-detail{
+
+}
 .page-member .list-member .info-member .name{
   color: #365899;
   font-size: 14px;
@@ -356,3 +359,109 @@
   line-height: 18px;
   padding-bottom: 1px;
 }
+.page-member .list-member .work{
+  color: #90949c;
+  font-size: 12px;
+  line-height: 16px;
+  font-family: inherit;
+}
+.page-member .list-member .btn-friend .btn  span{
+  margin-right: 3px;
+  font-size: 10px;
+}
+.btn .caret{
+  margin-left: 1px;
+}
+.page-member .list-member .btn-friend .btn{
+  background-color: #f5f6f7;
+  border: 1px solid #ccd0d5;
+  color: #4b4f56;
+  font-size: 12px;
+  border-radius: 2px;
+  box-sizing: content-box;
+  font-size: 12px;
+  -webkit-font-smoothing: antialiased;
+  font-weight: bold;
+  justify-content: center;
+  padding: 4px 8px;
+  position: relative;
+  text-align: center;
+  text-shadow: none;
+  vertical-align: middle;
+  cursor: pointer;
+  display: inline-block;
+  text-decoration: none;
+  white-space: nowrap
+}
+.page-member .info-admin{
+  align-items: center;
+  border-bottom: 1px solid #dddfe2;
+  display: flex;
+  font-size: 14px;
+  -webkit-font-smoothing: antialiased;
+  justify-content: space-between;
+  line-height: 14px;
+  margin: 20px 12px 5px;
+  padding-bottom: 10px;
+  clear: both;
+  color: #4b4f56;
+  font-weight: 600;
+}
+.page-member .info-admin .number-admin{
+  font-size: 13px;
+  margin-left: 4px;
+  color: #90949c;
+  font-weight: 600;
+}
+
+.page-image .title{
+  color: #4e5665;
+  display: block;
+  font: Helvetica;
+  font-size: 13px;
+  line-height: 124%;
+  margin-right: inherit;
+  padding-left: 16px;
+  color: #373e4d;
+  font-weight: bold;
+}
+.page-image .header{
+  background-color: #f5f6f7;
+  border-bottom: 1px solid #ccc;
+  border-top: 1px solid #fff;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+  height: 42px;
+  display: flex;
+  align-items: center;
+}
+.page-image .item-image{
+  background: #fff;
+
+  display: inline-block;
+  outline: none;
+  padding: 2px;
+  position: relative;
+  vertical-align:bottom;
+}
+.page-image .item-image img{
+ width: 100%;
+ height: 186px;
+   border: 1px solid #ccc;
+}
+.page-image .list-image{
+padding: 2px;
+}
+.page-image .list-video{
+  padding: 2px;
+  }
+  .page-image .item-video{
+    background: #fff;
+
+    display: inline-block;
+    outline: none;
+    padding: 2px;
+    height: 200px;
+    position: relative;
+    vertical-align:bottom;
+  }
